Feature/pre release (#205)
Lot's of bug fixes and little improvements.

---------
